              zeroDivisors.
        Class Vector<T>:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Function subscript(), superscript():
            - When passing one of Regina's integer types, there is now a
              precondition that the given value is not infinity.
        Function valueOf():
            - The native C++ integer versions of valueOf() are now templated.
            - The unsigned integer versions now reject negative numbers
              instead of performing wrap-around arithmetic.
            - All numeric versions of valueOf() (native integers and double)
              have been tightened with respect to unexpected characters,
              including leading and trailing whitespace:
              + they always return false, as the documentation has always
                promised (in the past, they succeeded in the presence of
                leading whitespace);
              + instead of performing the conversion "as best it can", the
                documentation now states that the value stored in dest is
                undefined.
        Constant is_cpp_integer_v<T>, is_signed_cpp_integer_v<T>,
                is_unsigned_cpp_integer_v<T>:
            - New compile-time constant is_signed_cpp_integer_v<T>.
            - All three constants are now false when T == bool (previously,
              is_cpp_integer_v<bool> and is_unsigned_cpp_integer_v<bool> were
              both true).
        Concepts:
            - Many new concepts, accessible via #include <concepts/*.h>:
              + ArbitraryPrecisionInteger, ArbitraryPrecisionIntegerVector,
                ArrayOf, AssignableTo, BidirectionalIteratorFor, CanConstruct,
                CharIterator, CoefficientDomain, ConstRefArrayOf, CppInteger,
                Domain, Field, ForwardIteratorFor, InherentlyTightEncodable,